# tasker

./: .env.example  COMPLETE_MODEL_ANALYSIS.md  LICENSE  README.md  alembic.ini  entity_relationships.py  main.py  pyproject.toml  test_logging.py
src/: app.py  error_handlers.py  errors.py  factory.py  logging.py  main.py  models.py  responses.py
src/alembic/: env.py
src/alembic/versions/: 957906efcfec_initial_migration_create_board_system_.py  ded7554d938d_createdat_and_updated_at_added.py
src/configs/: __init__.py  app_vars.py  database.py
src/core/: __init__.py  error_handlers.py  errors.py  factory.py
src/entities/: __init__.py  board.py  board_list.py  card.py  card_attachment.py  card_comment.py  card_label.py  enums.py  label.py
src/middlewares/: __init__.py  logging_middleware.py
src/modules/: __init__.py
src/modules/health/: __init__.py  controllers.py  models.py  routes.py
src/schemas/: __init__.py  boards.py  responses.py
src/utils/: logging.py
